#61: Project Endpoint: Information about Roles
